--- a/html/main.html
+++ b/html/main.html
@@ -63,6 +63,16 @@
         from {opacity: .4} 
         to {opacity: 1}
     }
+
+    #comp_main_best{
+        margin-top:78px;
+    }
+    #comp_main_best .div_title{
+        font-size:28px;
+    }
+    #comp_main_best .comp_product_list{
+        margin-top: 32px;;
+    }
 </style>
 <script src="../js/click_slide.js">
 </script>
@@ -84,11 +94,21 @@
             </div>
         </div>
         <div id="comp_main_best">
-            <p>오늘의 best</p>
+            <p class="div_title">오늘의 Best</p>
             <div class="comp_product_list">
                 <div class="comp_product_item">
                     <div class="product_img_container">
-                        <img src=""
+                        <img src="../img/product/A00000001.png">
+                    </div>
+                    <div class="comp_like">
+                        <img src="../img/icon/icon_heart_true.svg">
+                    </div>
+                    <div class="product_item_text">
+                        <p>추천 상품</p>
+                        <p>과즙 팡팡! 인덕이 젤리</p>
+                        <span class="discount_text">50%</span>
+                        <p class="price_next_discount">3,200원</p>
+                        <p class="price_prev_discount">6,400원</p>
                     </div>
                 </div>
             </div>
